@@ -1,3 +1,3 @@
-Added "update" and the key/data batch variants.
+Added "filter".
 
 Nearly untested.
